Update with bootstrap
Atualizacao websites com bootstrap

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Meu subtítulo</h2>
     <p class="border">Na Mozilla, somos uma comunidade global</p>
     
-    <div>
+    <p class="title">
     <ol> 
       <li>tecnólogos</li>
       <li class="mouseIntercalado">pensadores</li>
@@ -26,7 +26,7 @@
       <li class="mouseIntercalado">pensadores</li>
       <li>construtores</li>
     </ol>
-</div>
+  </p>
     
   
     <p>
